[LF-6/crawler-producer] kafka producer 빈 개발 완료 - spring boot 자동 구성으로 KafkaProducerTemplate<K, V> 를 각 모듈별로 자동 주입 받도록 개발 - custom.kafka.producer.is-enabled: true 값이면 모듈에 자동 구성되도록 설정 가능

--- a/LiveFeedCrawler/build.gradle
+++ b/LiveFeedCrawler/build.gradle
@@ -5,7 +5,9 @@ plugins {
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-batch'
+//    implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.kafka:spring-kafka'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+    implementation project(":LiveFeedCommon")
 }
