[LF-8/common-ci] common 모듈 CI 작성 완료

--- a/.github/workflows/common-actions.yml
+++ b/.github/workflows/common-actions.yml
@@ -10,7 +10,7 @@ name: LiveFeedCommon Module CI
 on:
   push:
     branches:
-      - LF-8/common-ci
+      - main
     paths:
       - "LiveFeedCommon/**"
 
