--- a/LiveFeedCrawler/build.gradle
+++ b/LiveFeedCrawler/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
     implementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+    implementation project(":LiveFeedCommon")
 }
