[LF-8/common-ci] crawler 모듈 CI 파일 작성 진행 중

--- a/LiveFeedCrawler/build.gradle
+++ b/LiveFeedCrawler/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'java-library'
 }
 
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
+
+ext.VERSION = version
 
 dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-batch'
