[LF-8/common-ci] crawler 모듈 CI 파일 작성 테스트1

--- a/LiveFeedCrawler/Dockerfile
+++ b/LiveFeedCrawler/Dockerfile
@@ -2,7 +2,9 @@ FROM openjdk:17-jdk
 
 WORKDIR /app
 
-ARG profile
+ARG KAFKA_BOOTSTRAP_SERVERS
+ARG CRAWLER_PORT
+
 ENV active_profile=prod \
     KAFKA_BOOTSTRAP_SERVERS=$KAFKA_BOOTSTRAP_SERVERS \
     CRAWLER_PORT=$CRAWLER_PORT
