--- a/.github/workflows/crawler-actions.yml
+++ b/.github/workflows/crawler-actions.yml
@@ -15,14 +15,50 @@ on:
       - "LiveFeedCrawler/**"
 
 jobs:
-  test:
+  test-and-build:
     runs-on: ubuntu-latest
+    environment: crawler
+
+    env:
+      REGISTRY: ${{ secrets.REGISTRY }}
+      IMAGE_NAME: ${{ secrets.IMAGE_NAME }}
+      USERNAME: ${{ secrets.USERNAME }}
+
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - uses: actions/checkout@v3.5.2
       - name: Set up JDK 17
+
         uses: actions/setup-java@v3.11.0
         with:
           distribution: 'zulu'
           java-version: '17'
-      - name: Do Gradle Test
+
+      - name: Gradle Test
         run: ./gradlew :LiveFeedCrawler:test
+
+#      - name: Setup Gradle
+#        uses: gradle/gradle-build-action@v2.4.2
+
+      - name: Extract version variable
+        run: |
+          echo "APP_VERSION=$(./gradlew :LiveFeedCrawler:properties -q | grep version | awk -F ' ' '{ print $2 }')" >> $GITHUB_ENV
+
+      - name: Execute Gradle build
+        run: ./gradlew :LiveFeedCrawler:clean :LiveFeedCrawler:bootJar
+
+      - name: docker image build
+        run: docker build -t $REGISTRY/$IMAGE_NAME:$APP_VERSION" .
+
+      - name: Login to Container registry
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: $REGISTRY
+          username: $USERNAME
+          password: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
+
+      - name: docker image push to container registry
+        run : docker push $REGISTRY/$IMAGE_NAME:$APP_VERSION
