--- a/LiveFeedCrawler/build.gradle
+++ b/LiveFeedCrawler/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 version = '0.0.1'
 
-ext.VERSION = version
+//ext.VERSION = version
 
 dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-batch'
