[LF-8/common-ci] crawler 모듈 CI 파일 작성 테스트3

--- a/.github/workflows/crawler-actions.yml
+++ b/.github/workflows/crawler-actions.yml
@@ -11,8 +11,8 @@ on:
   push:
     branches:
       - LF-8/common-ci
-    paths:
-      - "LiveFeedCrawler/**"
+#    paths:
+#      - "LiveFeedCrawler/**"
 
 jobs:
   test-and-build:
