--- a/.github/workflows/crawler-actions.yml
+++ b/.github/workflows/crawler-actions.yml
@@ -55,7 +55,7 @@ jobs:
           docker build \
           --build-arg KAFKA_BOOTSTRAP_SERVERS=${{ secrets.KAFKA_BOOTSTRAP_SERVERS }} \
           --build-arg CRAWLER_PORT=${{ secrets.CRAWLER_PORT }} \
-          -t $REGISTRY/$IMAGE_NAME:$APP_VERSION .
+          -t ${{ secrets.REGISTRY }}/${{ secrets.IMAGE_NAME }}:$APP_VERSION .
 
       - name: Login to Container registry
         uses: docker/login-action@v2.1.0
