[LF-8/common-ci] crawler 모듈 CI 파일 작성 테스트9

--- a/.github/workflows/crawler-actions.yml
+++ b/.github/workflows/crawler-actions.yml
@@ -51,10 +51,13 @@ jobs:
         run: ./gradlew :LiveFeedCrawler:clean :LiveFeedCrawler:bootJar
 
       - name: Move to target module location
-        run: cd ./LiveFeedCrawler
+        run: |
+          cd ./LiveFeedCrawler
+          ls
 
       - name: Docker image build
         run: | 
+          ls
           docker build \
           --build-arg KAFKA_BOOTSTRAP_SERVERS=${{ secrets.KAFKA_BOOTSTRAP_SERVERS }} \
           --build-arg CRAWLER_PORT=${{ secrets.CRAWLER_PORT }} \
