--- a/.github/workflows/crawler-actions.yml
+++ b/.github/workflows/crawler-actions.yml
@@ -61,8 +61,8 @@ jobs:
       - name: Login to Container registry
         uses: docker/login-action@v2.1.0
         with:
-          registry: $REGISTRY
-          username: $USERNAME
+          registry: ${{ env.REGISTRY }}
+          username: ${{ env.USERNAME }}
           password: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
 
       - name: Docker image push to container registry
