--- a/.github/workflows/crawler-actions.yml
+++ b/.github/workflows/crawler-actions.yml
@@ -10,9 +10,9 @@ name: LiveFeedCrawler Module CI
 on:
   push:
     branches:
-      - LF-8/common-ci
-#    paths:
-#      - "LiveFeedCrawler/**"
+      - main
+    paths:
+      - "LiveFeedCrawler/**"
 
 jobs:
   test-and-build:
@@ -29,19 +29,17 @@ jobs:
       packages: write
 
     steps:
-      - uses: actions/checkout@v3.5.2
-      - name: Set up JDK 17
+      - name: Checkout branch
+        uses: actions/checkout@v3.5.2
 
+      - name: Set up JDK 17
         uses: actions/setup-java@v3.11.0
         with:
           distribution: 'zulu'
           java-version: '17'
 
-#      - name: Gradle Test
-#        run: ./gradlew :LiveFeedCrawler:test
-
-#      - name: Setup Gradle
-#        uses: gradle/gradle-build-action@v2.4.2
+      - name: Gradle Test
+        run: ./gradlew :LiveFeedCrawler:test
 
       - name: Extract version variable
         run: |
