--- a/LiveFeedCrawler/build.gradle
+++ b/LiveFeedCrawler/build.gradle
@@ -5,10 +5,12 @@ plugins {
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
     implementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
+    implementation 'mysql:mysql-connector-java:8.0.33'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
     implementation project(":LiveFeedCommon")
 }
