--- a/LiveFeedCrawler/build.gradle
+++ b/LiveFeedCrawler/build.gradle
@@ -12,5 +12,7 @@ dependencies {
     implementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
     implementation 'mysql:mysql-connector-java:8.0.33'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testImplementation 'org.springframework.batch:spring-batch-test'
+    testImplementation 'org.projectlombok:lombok'
     implementation project(":LiveFeedCommon")
 }
