--- a/LiveFeedCrawler/src/main/resources/application-prod.yaml
+++ b/LiveFeedCrawler/src/main/resources/application-prod.yaml
@@ -5,6 +5,12 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
+  datasource:
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USER}
+    password: ${DATABASE_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
 server:
   port: ${CRAWLER_PORT}
 
