--- a/LiveFeedCrawler/build.gradle
+++ b/LiveFeedCrawler/build.gradle
@@ -11,5 +11,6 @@ dependencies {
     implementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
     implementation 'mysql:mysql-connector-java:8.0.33'
     testImplementation 'org.springframework.batch:spring-batch-test'
+    testImplementation 'com.h2database:h2'
     implementation project(":LiveFeedCommon")
 }
