--- a/LiveFeedCrawler/src/test/resources/application.yaml
+++ b/LiveFeedCrawler/src/test/resources/application.yaml
@@ -1,3 +1,20 @@
+spring:
+  profiles:
+    default: test
+  kafka:
+    bootstrap-servers: localhost:9093
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+  datasource:
+    driver-class-name: org.h2.Driver
+  batch:
+    jdbc:
+      initialize-schema: always
+
+server:
+  port: 8081
+
 custom:
   kafka:
     producer:
