--- a/LiveFeedCommon/build.gradle
+++ b/LiveFeedCommon/build.gradle
@@ -7,6 +7,6 @@ version = '0.0.1-SNAPSHOT'
 bootJar.enabled = false
 
 dependencies {
-    implementation 'org.springframework.kafka:spring-kafka'
+    api 'org.springframework.kafka:spring-kafka'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
