--- a/LiveFeedCrawler/Dockerfile
+++ b/LiveFeedCrawler/Dockerfile
@@ -4,10 +4,16 @@ WORKDIR /app
 
 ARG KAFKA_BOOTSTRAP_SERVERS
 ARG CRAWLER_PORT
+ARG DATABASE_URL
+ARG DATABASE_USER
+ARG DATABASE_PASSWORD
 
 ENV active_profile=prod \
     KAFKA_BOOTSTRAP_SERVERS=$KAFKA_BOOTSTRAP_SERVERS \
-    CRAWLER_PORT=$CRAWLER_PORT
+    CRAWLER_PORT=$CRAWLER_PORT \
+    DATABASE_URL=$DATABASE_URL \
+    DATABASE_USER=$DATABASE_USER \
+    DATABASE_PASSWORD=$DATABASE_PASSWORD
 
 RUN chmod a+x /app
 
