[LF-9/crawler] 테스트 시 Spring Batch 단일 job 자동 구성 방지

--- a/.github/workflows/crawler-actions.yml
+++ b/.github/workflows/crawler-actions.yml
@@ -10,7 +10,7 @@ name: LiveFeedCrawler Module CI
 on:
   push:
     branches:
-      - main
+      - LF-9/crawler
     paths:
       - "LiveFeedCrawler/**"
 
