--- a/LiveFeedCrawler/src/main/resources/application-prod.yaml
+++ b/LiveFeedCrawler/src/main/resources/application-prod.yaml
@@ -11,6 +11,10 @@ spring:
     password: ${DATABASE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  batch:
+    job:
+      enabled: false
+
 server:
   port: ${CRAWLER_PORT}
 
