--- a/LiveFeedCrawler/src/test/resources/application.yaml
+++ b/LiveFeedCrawler/src/test/resources/application.yaml
@@ -9,6 +9,8 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
   batch:
+    job:
+      enabled: false
     jdbc:
       initialize-schema: always
 
