[LF-14/crawler] 테스트 시 Selenium Chrome Driver 버전 불일치 문제로 reader 테스트 disabled 처리

--- a/.github/workflows/crawler-actions.yml
+++ b/.github/workflows/crawler-actions.yml
@@ -10,7 +10,7 @@ name: LiveFeedCrawler Module CI
 on:
   push:
     branches:
-      - LF-9/crawler
+      - main
     paths:
       - "LiveFeedCrawler/**"
 
