[LF-19/article-parser] 기사의 헤더 부분에서 데이터 추출하는 코드 작성 진행 중

--- a/LiveFeedParser/build.gradle
+++ b/LiveFeedParser/build.gradle
@@ -5,5 +5,7 @@ plugins {
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
+    implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
+    implementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
     implementation project(":LiveFeedCommon")
 }
