--- a/LiveFeedCrawler/src/main/resources/application-prod.yaml
+++ b/LiveFeedCrawler/src/main/resources/application-prod.yaml
@@ -2,7 +2,7 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
     producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      key-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
   datasource:
