[LF-19/article-parser] 컨슈머 구조 변경
- KafkaConsumerTemplate에 DLQ 토픽으로 넣는 로직 추가
- 기존 KafkaProducerTemplate에 DLQ 토픽으로 넣는 로직 제거

--- a/LiveFeedCrawler/src/main/resources/application-prod.yaml
+++ b/LiveFeedCrawler/src/main/resources/application-prod.yaml
@@ -1,4 +1,7 @@
 spring:
+  application:
+    name: ${APPLICATION_NAME}
+
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
     producer:
