--- a/LiveFeedCrawler/Dockerfile
+++ b/LiveFeedCrawler/Dockerfile
@@ -3,14 +3,16 @@ FROM openjdk:17-jdk
 WORKDIR /app
 
 ARG KAFKA_BOOTSTRAP_SERVERS
-ARG CRAWLER_PORT
+ARG APPLICATION_NAME
+ARG APPLICATION_PORT
 ARG DATABASE_URL
 ARG DATABASE_USER
 ARG DATABASE_PASSWORD
 
 ENV active_profile=prod \
     KAFKA_BOOTSTRAP_SERVERS=$KAFKA_BOOTSTRAP_SERVERS \
-    CRAWLER_PORT=$CRAWLER_PORT \
+    APPLICATION_NAME=$APPLICATION_NAME \
+    APPLICATION_PORT=$APPLICATION_PORT \
     DATABASE_URL=$DATABASE_URL \
     DATABASE_USER=$DATABASE_USER \
     DATABASE_PASSWORD=$DATABASE_PASSWORD
