[LF-19/article parser] 파싱 어플리케이션 구현 완료 (#11)
* [LF-19/article-parser] 기사의 헤더 부분에서 데이터 추출하는 코드 작성 진행 중

* [LF-19/article-parser] 기사의 헤더 부분에서 파서 완료

* [LF-19/article-parser] 스포츠 기사 파싱 부분 구현 완료

* [LF-19/article-parser] 컨슈머 구조 변경

- KafkaConsumerTemplate에 DLQ 토픽으로 넣는 로직 추가
- 기존 KafkaProducerTemplate에 DLQ 토픽으로 넣는 로직 제거

* [LF-19/article-parser] parser 로직 구현 완료

- parser 로직 구현 완료
- github actions 스크립트 작성 완료
- 환경 변수 수정에 따른 crawler actions 스크립트 수정
- 관련된 Dockerfile 환경 변수 이름 수정

* [LF-19/article-parser] parser 로직 구현 완료

- test 프로파일인 경우 카프카 리스너 동작하지 않도록 profile 추가
- parseResultDto 클래스 속성값에 "" 들어가도록 수정

--- a/LiveFeedCrawler/src/main/resources/application-prod.yaml
+++ b/LiveFeedCrawler/src/main/resources/application-prod.yaml
@@ -1,4 +1,7 @@
 spring:
+  application:
+    name: ${APPLICATION_NAME}
+
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
     producer:
@@ -16,7 +19,7 @@ spring:
       enabled: false
 
 server:
-  port: ${CRAWLER_PORT}
+  port: ${APPLICATION_PORT}
 
 custom:
   kafka:
