--- a/LiveFeedParser/build.gradle
+++ b/LiveFeedParser/build.gradle
@@ -7,5 +7,6 @@ version = '0.0.1-SNAPSHOT'
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
     implementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation project(":LiveFeedCommon")
 }
