--- a/LiveFeedParser/Dockerfile
+++ b/LiveFeedParser/Dockerfile
@@ -5,11 +5,15 @@ WORKDIR /app
 ARG KAFKA_BOOTSTRAP_SERVERS
 ARG APPLICATION_NAME
 ARG APPLICATION_PORT
+ARG REDIS_HOST
+ARG REDIS_PORT
 
 ENV active_profile=prod \
     KAFKA_BOOTSTRAP_SERVERS=$KAFKA_BOOTSTRAP_SERVERS \
     APPLICATION_NAME=$APPLICATION_NAME \
-    APPLICATION_PORT=$APPLICATION_PORT
+    APPLICATION_PORT=$APPLICATION_PORT \
+    REDIS_HOST=$REDIS_HOST \
+    REDIS_PORT=$REDIS_PORT
 
 RUN chmod a+x /app
 
