--- a/LiveFeedParser/src/main/resources/application-prod.yaml
+++ b/LiveFeedParser/src/main/resources/application-prod.yaml
@@ -15,6 +15,11 @@ spring:
       key-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+
 server:
   port: ${APPLICATION_PORT}
 
