--- a/LiveFeedSaver/build.gradle
+++ b/LiveFeedSaver/build.gradle
@@ -5,4 +5,13 @@ plugins {
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
+    implementation 'org.opensearch.client:spring-data-opensearch:1.2.0'
+    implementation 'org.opensearch.client:spring-data-opensearch-starter:1.2.0'
+    implementation project(":LiveFeedCommon")
+
+//    implementation 'software.amazon.awssdk:aws-sdk-java-pom:2.20.68'
+//    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.0.0")
+//    // Replace the following with the starter dependencies of specific modules you wish to use
+//    implementation 'io.awspring.cloud:spring-cloud-aws-starter'
+    testImplementation 'org.opensearch.client:spring-data-opensearch-test-autoconfigure:1.2.0'
 }
