[LF-27/open-search] sniffer 에러 수정 완료
- Sniffer 빈을 null로 등록하여 해당 동작을 수행하지 않도록 설정
- Sniffer 기능은 일단 local의 경우 작동하지 않도록 설정함

--- a/LiveFeedSaver/build.gradle
+++ b/LiveFeedSaver/build.gradle
@@ -7,6 +7,8 @@ version = '0.0.1-SNAPSHOT'
 dependencies {
     implementation 'org.opensearch.client:spring-data-opensearch:1.2.0'
     implementation 'org.opensearch.client:spring-data-opensearch-starter:1.2.0'
+    implementation 'org.opensearch.client:opensearch-rest-client-sniffer:2.8.0'
+
     implementation project(":LiveFeedCommon")
 
 //    implementation 'software.amazon.awssdk:aws-sdk-java-pom:2.20.68'
