[LF-27/open-search] 데이터 저장 모듈 구현 (#14)
* [LF-25/ci-and-change-parser] 파싱 부분 구조 개선

- ParserProvider 클래스가 적절한 ParserManager를 불러준다.
-> 현재는 뉴스 기사만 크롤링 하기 때문에 이후에 다른 ParserManager 구현 후 추가하면 된다.

- ParserManager가 적절한 Parser를 선택합니다.
-> 파서는 플랫폼과 기사 주제별로 구현체를 구현하는 형태입니다.

* [LF-25/ci-and-change-parser] 컨슈머 value와 프로듀서 value 구조 변경

- ConsumerRecord 의 value 값을 { "url": ~~ } 형식으로 변경
- ProducerRecord 의 value 값 중 html 부분을 헤더와 바디로 분리

* [LF-25/ci-and-change-parser] 프로젝트 패키지 구조 변경

* [LF-27/open-search] http를 이용한 elasticsearch 학습

* [LF-27/open-search] opensearch에 저장하는 로직 작성

- org.opensearch.client.sniff.sniffer 에러 해결 필요

* [LF-27/open-search] sniffer 에러 수정 완료

- Sniffer 빈을 null로 등록하여 해당 동작을 수행하지 않도록 설정
- Sniffer 기능은 일단 local의 경우 작동하지 않도록 설정함

* [LF-27/open-search] jpa domain entity 설계 완료

- ddl 쿼리는 추가 작업 필요

* [LF-27/open-search] rdb 저장 로직 작성 진행 중

* [LF-27/open-search] DB저장 로직 구현

- DB 저장에 실패할 경우 opensearch에서 다시 삭제해야 하는 로직 구현 필요
- Category 테이블에 동일한 카테고리가 중복해서 저장되는 문제 해결 필요

* [LF-27/open-search] 데이터 저장 모듈 구현 완료

* [LF-27/open-search] 불필요한 import 삭제 및 주석 제거

--- a/LiveFeedSaver/build.gradle
+++ b/LiveFeedSaver/build.gradle
@@ -5,4 +5,18 @@ plugins {
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
+    implementation 'org.opensearch.client:spring-data-opensearch:1.2.0'
+    implementation 'org.opensearch.client:spring-data-opensearch-starter:1.2.0'
+    implementation 'org.opensearch.client:opensearch-rest-client-sniffer:2.8.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation project(":LiveFeedCommon")
+
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'com.h2database:h2'
+
+//    implementation 'software.amazon.awssdk:aws-sdk-java-pom:2.20.68'
+//    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.0.0")
+//    // Replace the following with the starter dependencies of specific modules you wish to use
+//    implementation 'io.awspring.cloud:spring-cloud-aws-starter'
+    testImplementation 'org.opensearch.client:spring-data-opensearch-test-autoconfigure:1.2.0'
 }
