[LF-30/architecture-refactoring] kafkaConsumerTemplate 변경 진행 중

--- a/LiveFeedCommon/build.gradle
+++ b/LiveFeedCommon/build.gradle
@@ -7,6 +7,9 @@ version = '0.0.1-SNAPSHOT'
 bootJar.enabled = false
 
 dependencies {
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+
     api 'org.springframework.kafka:spring-kafka'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
