--- a/LiveFeedCommon/build.gradle
+++ b/LiveFeedCommon/build.gradle
@@ -9,6 +9,7 @@ bootJar.enabled = false
 dependencies {
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.google.guava:guava:32.1.3-jre'
 
     api 'org.springframework.kafka:spring-kafka'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
