[LF-31/detail-article] spring rest docs를 이용한 컨트롤러 테스트 및 문서 작성 완료
- controller 테스트 코드 작성 완료
- Spring REST Docs를 이용한 문서 작성 완료

--- a/LiveFeedService/build.gradle
+++ b/LiveFeedService/build.gradle
@@ -35,12 +35,17 @@ test {
 asciidoctor {
     inputs.dir snippetsDir
     configurations 'asciidoctorExt'
+
+    sources {
+        include("**/index.adoc")
+    }
+    baseDirFollowsSourceFile()
     dependsOn test
 }
 
 bootJar {
     dependsOn asciidoctor
-    from("${asciidoctor.outputDir}/html5") {
-        into 'static/docs'
+    from("${asciidoctor.outputDir}") {
+        into '/static/docs'
     }
 }
