[LF-32/article-list] elasticsearch nativeQuery 테스트 진행 중

--- a/LiveFeedService/src/test/resources/application.yaml
+++ b/LiveFeedService/src/test/resources/application.yaml
@@ -18,3 +18,6 @@ decorator:
     p6spy:
       enable-logging: true
       multiline: true
+logging:
+  level:
+    org.springframework.data.elasticsearch.client: DEBUG
