--- a/LiveFeedCrawler/src/test/resources/application.yaml
+++ b/LiveFeedCrawler/src/test/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     bootstrap-servers: localhost:9094
     producer:
       key-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
   datasource:
     driver-class-name: org.h2.Driver
   batch:
