--- a/LiveFeedService/src/test/resources/application.yaml
+++ b/LiveFeedService/src/test/resources/application.yaml
@@ -20,4 +20,6 @@ decorator:
       multiline: true
 logging:
   level:
-    org.springframework.data.elasticsearch.client: DEBUG
+    org.springframework.data.elasticsearch.core: DEBUG
+    org.elasticsearch.client: TRACE
+    org.apache.http: TRACE
