[LF-32/article-list] 기사 목록을 전달하는 API 구현 완료 (#18)
* [LF-31/detail-article] 기사 상세 정보 api 서비스 레이어까지 작성 완료

- 컨트롤러 레이어 구현 필요
- exceptionHandler 구현 필요
- rest Doc 이용해서 문서 작성

* [LF-31/detail-article] 기사 상세 api 컨트롤러 및 에러 처리 구현 완료

- 컨트롤러 테스트 코드 작성 필요
- rest Doc 이용해서 문서 작성 필요

* [LF-31/detail-article] 컨트롤러 테스트 코드 작성 진행 중

* [LF-31/detail-article] spring rest docs를 이용한 컨트롤러 테스트 및 문서 작성 완료

- controller 테스트 코드 작성 완료
- Spring REST Docs를 이용한 문서 작성 완료

* [LF-31/detail-article] spring rest docs 문서 수정

- json 형식을 이쁘게 보여주도록 수정

* [LF-32/article-list] opensearch 개발환경에서 elasticsearch로 변경 완료

- DB 저장하는 saver 모듈 변경 완료
- service 모듈 패키지 이름 변경

* [LF-32/article-list] 기사 목록 api 구현 진행 중

* [LF-32/article-list] elasticsearch nativeQuery 테스트 진행 중

* [LF-32/article-list] nativeQuery를 이용한 search 쿼리 구현

* [LF-32/article-list] elasticSearch native 쿼리 작성 완료

- 쿼리 결과를 정제하는 도메인 객체 작업 진행 예정

* [LF-32/article-list] 기사 목록을 전달하는 API 구현 완료

* [LF-32/article-list] 불필요한 코드 삭제

* [LF-32/article-list] search 쿼리가 아닌 경우와 search 쿼리인 경우 분리

* [LF-32/article-list] elasticsearch를 이용하여 기사 검색 api 구현 완료

--- a/LiveFeedSaver/build.gradle
+++ b/LiveFeedSaver/build.gradle
@@ -5,9 +5,7 @@ plugins {
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
-    implementation 'org.opensearch.client:spring-data-opensearch:1.2.0'
-    implementation 'org.opensearch.client:spring-data-opensearch-starter:1.2.0'
-    implementation 'org.opensearch.client:opensearch-rest-client-sniffer:2.8.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation project(":LiveFeedCommon")
 
@@ -18,5 +16,4 @@ dependencies {
 //    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.0.0")
 //    // Replace the following with the starter dependencies of specific modules you wish to use
 //    implementation 'io.awspring.cloud:spring-cloud-aws-starter'
-    testImplementation 'org.opensearch.client:spring-data-opensearch-test-autoconfigure:1.2.0'
 }
