--- a/LiveFeedService/src/test/resources/application.yaml
+++ b/LiveFeedService/src/test/resources/application.yaml
@@ -18,3 +18,9 @@ decorator:
     p6spy:
       enable-logging: true
       multiline: true
+      
+logging:
+  level:
+    org.springframework.data.elasticsearch.core: DEBUG
+    org.elasticsearch.client: TRACE
+    org.apache.http: TRACE
