--- a/LiveFeedCrawler/src/main/resources/application-prod.yaml
+++ b/LiveFeedCrawler/src/main/resources/application-prod.yaml
@@ -6,7 +6,7 @@ spring:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
     producer:
       key-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
   datasource:
     url: ${DATABASE_URL}
