[batch-ci] batch-ci 테스트 0.0.2

--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -8,14 +8,11 @@
 name: LiveFeedCrawler Module CI
 
 on:
-  push:
-    branches:
-      - 'LF-*'
-    paths:
-      - "LiveFeedBatch/**"
   pull_request:
     types:
       - opened
+      - closed
+      - edited
     branches:
       - 'LF-*'
     paths:
