--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -5,18 +5,23 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: LiveFeedCrawler Module CI
+name: LiveFeedBatch Module CI
 
 on:
-  pull_request:
-    types:
-      - opened
-      - closed
-      - edited
+  push:
     branches:
-      - 'LF-*'
+      - batch-ci
     paths:
       - "LiveFeedBatch/**"
+#  pull_request:
+#    types:
+#      - opened
+#      - closed
+#      - edited
+#    branches:
+#      - 'LF-*'
+#    paths:
+#      - "LiveFeedBatch/**"
 
 jobs:
   test:
