[batch-ci] batch-ci 테스트 0.0.3

--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -8,20 +8,20 @@
 name: LiveFeedBatch Module CI
 
 on:
-  push:
-    branches:
-      - batch-ci
-    paths:
-      - "LiveFeedBatch/**"
-#  pull_request:
-#    types:
-#      - opened
-#      - closed
-#      - edited
+#  push:
 #    branches:
-#      - 'LF-*'
+#      - batch-ci
 #    paths:
 #      - "LiveFeedBatch/**"
+  pull_request:
+    types:
+      - opened
+      - closed
+      - edited
+    branches:
+      - 'batch-ci'
+    paths:
+      - "LiveFeedBatch/**"
 
 jobs:
   test:
