[batch-ci] batch-ci 테스트 0.0.6

--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -14,10 +14,7 @@ on:
 #    paths:
 #      - "LiveFeedBatch/**"
   pull_request:
-    types:
-      - opened
-      - closed
-      - edited
+    types: [opened, closed, edited]
     branches:
       - 'batch-ci'
     paths:
