--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -9,7 +9,7 @@ name: LiveFeedBatch Module CI
 
 on:
   pull_request:
-    types: [opened, closed]
+    types: [opened, closed, reopened]
     branches:
       - 'batch-ci'
       - 'LF-*'
