--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -8,6 +8,9 @@
 name: LiveFeedBatch Module CI
 
 on:
+  push:
+    branches:
+      - 'LF-*'
   pull_request:
     types: [opened, closed, reopened]
     branches:
