--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -8,10 +8,13 @@
 name: LiveFeedBatch Module CI
 
 on:
-  pull_request:
-    types: [opened, closed]
+  push:
     branches:
-      - 'batch-ci'
+      - 'LF-*'
+  pull_request:
+    types: [opened, closed, reopened]
+    branches:
+      - 'LF-*'
     paths:
       - "LiveFeedBatch/**"
 
