[batch-ci1] batch-ci 테스트 0.0.12

--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -10,7 +10,12 @@ name: LiveFeedBatch Module CI
 on:
   pull_request:
     branches:
-      - 'LF-*'
+      - "LF-*"
+    paths:
+      - "LiveFeedBatch/**"
+  push:
+    branches:
+      - "LF-35/batch-modify"
     paths:
       - "LiveFeedBatch/**"
 
