[batch-ci1] batch-ci1 테스트 (#21)
* [batch-ci1] batch-ci 테스트 0.0.11

* [batch-ci1] batch-ci 테스트 0.0.12

--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -8,13 +8,14 @@
 name: LiveFeedBatch Module CI
 
 on:
+  pull_request:
+    branches:
+      - "LF-*"
+    paths:
+      - "LiveFeedBatch/**"
   push:
     branches:
-      - 'LF-*'
-  pull_request:
-    types: [opened, closed, reopened]
-    branches:
-      - 'LF-*'
+      - "LF-35/batch-modify"
     paths:
       - "LiveFeedBatch/**"
 
