--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   test:
-    if: github.event.pull_request.opened == true
+#    if: github.event.pull_request.opened == true
     runs-on: ubuntu-latest
     environment: batch
 
