--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -69,7 +69,7 @@ jobs:
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        users: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Container registry
         uses: docker/login-action@v2.1.0
