--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -65,11 +65,11 @@ jobs:
       - name: Execute Gradle build
         run: ./gradlew :LiveFeedBatch:clean :LiveFeedBatch:bootJar
 
-      - name: Docker image build
-        run: |
-          cd ./LiveFeedBatch
-          docker build \
-          -t $REGISTRY/$IMAGE_NAME:$APP_VERSION .
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Container registry
         uses: docker/login-action@v2.1.0
@@ -78,5 +78,12 @@ jobs:
           username: ${{ env.USERNAME }}
           password: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
 
-      - name: Docker image push to container registry
-        run: docker push $REGISTRY/$IMAGE_NAME:$APP_VERSION
+      - name: Image build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: ./LiveFeedBatch
+          push: true
+          tags: $REGISTRY/$IMAGE_NAME:$APP_VERSION
+          platforms: |
+            linux/amd64
+            linux/arm64
