[batch-ci7] batch-ci7 테스트 0.0.21

--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -37,7 +37,7 @@ jobs:
   build:
 #    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    environment: crawler
+    environment: batch
 
     env:
       REGISTRY: ${{ secrets.REGISTRY }}
