[batch-ci7] batch-ci7 테스트 0.0.19 (#27)
* [batch-ci7] batch-ci6 테스트 0.0.19

* [batch-ci7] batch-ci7 테스트 0.0.20

* [batch-ci7] batch-ci7 테스트 0.0.21

* [batch-ci7] batch-ci7 테스트 0.0.22

--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -37,7 +37,7 @@ jobs:
   build:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    environment: crawler
+    environment: batch
 
     env:
       REGISTRY: ${{ secrets.REGISTRY }}
@@ -83,7 +83,7 @@ jobs:
         with:
           context: ./LiveFeedBatch
           push: true
-          tags: $REGISTRY/$IMAGE_NAME:$APP_VERSION
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.APP_VERSION }}
           platforms: |
             linux/amd64
             linux/arm64
