[LF-35/batch-modify] batch 모듈 구현 완료

--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
     types: [opened, reopened, closed]
     branches:
-      - 'LF-35/batch-modify'
+      - 'main'
     paths:
       - 'LiveFeedBatch/**'
 
