--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -2,9 +2,11 @@ FROM openjdk:17-jdk
 
 WORKDIR /app
 
+ENV active_profile=prod
+
 RUN chmod a+x /app
 
 COPY build/libs/*.jar live-feed-batch.jar
 
-ENTRYPOINT ["java", "-jar", "/app/crawler.jar", "--spring.profiles.active=${active_profile}"]
+ENTRYPOINT ["java", "-jar", "/app/live-feed-batch.jar", "--spring.profiles.active=${active_profile}"]
 
