[LF-36/batch-cd] service 모듈 cd 테스트

--- a/LiveFeedService/src/main/resources/application-prod.yaml
+++ b/LiveFeedService/src/main/resources/application-prod.yaml
@@ -21,6 +21,8 @@ spring:
 elasticsearch:
   config:
     host-and-port: ${ELASTICSEARCH_URL}
+    user: ${ELASTICSEARCH_USER}
+    password: ${ELASTICSEARCH_PASSWORD}
 
 server:
   port: ${APPLICATION_PORT}
