--- a/.github/workflows/service-actions.yml
+++ b/.github/workflows/service-actions.yml
@@ -8,34 +8,37 @@
 name: LiveFeedService Module CI
 
 on:
-  pull_request:
-    types: [opened, reopened, closed]
-    branches:
-      - 'main'
+  push:
     paths:
       - 'LiveFeedService/**'
+#  pull_request:
+#    types: [opened, reopened, closed]
+#    branches:
+#      - 'main'
+#    paths:
+#      - 'LiveFeedService/**'
 
 jobs:
-  test:
-    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
-    runs-on: ubuntu-latest
-    environment: service
-
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v3.5.2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3.11.0
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-
-      - name: Gradle Test
-        run: ./gradlew :LiveFeedService:test
+#  test:
+#    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
+#    runs-on: ubuntu-latest
+#    environment: service
+#
+#    steps:
+#      - name: Checkout branch
+#        uses: actions/checkout@v3.5.2
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3.11.0
+#        with:
+#          distribution: 'zulu'
+#          java-version: '17'
+#
+#      - name: Gradle Test
+#        run: ./gradlew :LiveFeedService:test
 
   build:
-    if: github.event.pull_request.merged == true
+#    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     environment: service
 
@@ -83,7 +86,9 @@ jobs:
         with:
           context: ./LiveFeedService
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.APP_VERSION }}
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.APP_VERSION }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           platforms: |
             linux/amd64
             linux/arm64
