[LF-41/chromedriver] chromium 패키지 및 설치 명령어 수정

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -8,13 +8,10 @@ RUN chmod a+x /app
 
 COPY build/libs/*.jar live-feed-batch.jar
 
-RUN dnf install wget
-RUN wget https://rpmfind.net/linux/fedora/linux/development/rawhide/Everything/aarch64/os/Packages/c/chromium-common-120.0.6099.129-1.fc40.aarch64.rpm
-RUN dnf localinstall chromium-common-120.0.6099.129-1.fc40.aarch64.rpm
-RUN wget https://rpmfind.net/linux/fedora/linux/development/rawhide/Everything/aarch64/os/Packages/c/chromium-120.0.6099.129-1.fc40.aarch64.rpm
-RUN dnf localinstall chromium-120.0.6099.129-1.fc40.aarch64.rpm
-RUN wget https://rpmfind.net/linux/fedora/linux/development/rawhide/Everything/aarch64/os/Packages/c/chromedriver-120.0.6099.129-1.fc40.aarch64.rpm
-RUN dnf localinstall chromedriver-120.0.6099.129-1.fc40.aarch64.rpm
+RUN apt install -y \
+    chromium-common=112.0.5615.49-0ubuntu0.18.04.1 \
+    chromium=112.0.5615.49-0ubuntu0.18.04.1 \
+    chromium-driver=112.0.5615.49-0ubuntu0.18.04.1
 
 RUN cp /usr/bin/chromedriver /usr/local/bin/
 
