--- a/LiveFeedBatch/build.gradle
+++ b/LiveFeedBatch/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java-library'
 }
 
-version = '0.1.9'
+version = '0.1.10π'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
