[LF-41/chromedriver] cd 테스트 10

--- a/LiveFeedBatch/build.gradle
+++ b/LiveFeedBatch/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java-library'
 }
 
-version = '0.1.10π'
+version = '0.1.10'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
