--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -8,13 +8,12 @@ RUN chmod a+x /app
 
 COPY build/libs/*.jar live-feed-batch.jar
 
-#RUN apt-get update && \
-#    apt-get install -y wget unzip && \
-#    apt-get install -y chromium-driver
+RUN apt-get update && \
+    apt-get install -y chromium-driver chromium chromium-common
 
-RUN apt-get install -y chromium-common=112.0.5615.49-0ubuntu0.18.04.1 && \
-    apt-get install -y chromium=112.0.5615.49-0ubuntu0.18.04.1 && \
-    apt-get install -y chromium-driver=112.0.5615.49-0ubuntu0.18.04.1
+#RUN apt-get install -y chromium-common=112.0.5615.49-0ubuntu0.18.04.1 && \
+#    apt-get install -y chromium=112.0.5615.49-0ubuntu0.18.04.1 && \
+#    apt-get install -y chromium-driver=112.0.5615.49-0ubuntu0.18.04.1
 
 #RUN CHROMEDRIVER_VERSION=$(wget -qO- https://chromedriver.storage.googleapis.com/LATEST_RELEASE) && \
 #    wget -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip && \
