--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -9,7 +9,8 @@ RUN chmod a+x /app
 COPY build/libs/*.jar live-feed-batch.jar
 
 RUN apt-get update && \
-    apt-get install -y chromium-driver chromium chromium-common
+    apt-get install -y chromium-driver && \
+    apt-get install -y chromium-common
 
 #RUN apt-get install -y chromium-common=112.0.5615.49-0ubuntu0.18.04.1 && \
 #    apt-get install -y chromium=112.0.5615.49-0ubuntu0.18.04.1 && \
