[LF-41/chromedriver] cd 테스트 17

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -9,10 +9,7 @@ RUN chmod a+x /app
 COPY build/libs/*.jar live-feed-batch.jar
 
 RUN apt-get update && \
-    apt-get install -y wget unzip snapd && \
-    apt-get install -y chromium-driver
-
-RUN snap install chromium
+    apt-get install -y wget unzip chromium-driver
 
 #RUN apt-get install -y chromium-common=112.0.5615.49-0ubuntu0.18.04.1 && \
 #    apt-get install -y chromium=112.0.5615.49-0ubuntu0.18.04.1 && \
@@ -29,7 +26,6 @@ RUN CHROMEDRIVER_VERSION=$(wget -qO- https://chromedriver.storage.googleapis.com
     unzip /tmp/chromedriver.zip -d /usr/local/bin/ && \
     rm /tmp/chromedriver.zip && \
     chmod +x /usr/local/bin/chromedriver
-
 
 #RUN cp /usr/bin/chromedriver /usr/local/bin/
 
