[LF-41/chromedriver] chromium 패키지 및 설치 명령어 수정6

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -8,12 +8,12 @@ RUN chmod a+x /app
 
 COPY build/libs/*.jar live-feed-batch.jar
 
-RUN apt-get update && \
-    apt-get install -y wget unzip chromium-driver
+#RUN apt-get update && \
+#    apt-get install -y wget unzip chromium-driver
 
-#RUN apt-get install -y chromium-common=112.0.5615.49-0ubuntu0.18.04.1 && \
-#    apt-get install -y chromium=112.0.5615.49-0ubuntu0.18.04.1 && \
-#    apt-get install -y chromium-driver=112.0.5615.49-0ubuntu0.18.04.1
+RUN add-apt-repository universe && apt-get update && apt-get install -y \
+    chromium-browser \
+    chromium-chromedriver
 
 #RUN CHROMEDRIVER_VERSION=$(wget -qO- https://chromedriver.storage.googleapis.com/LATEST_RELEASE) && \
 #    wget -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip && \
@@ -21,12 +21,12 @@ RUN apt-get update && \
 #    rm /tmp/chromedriver.zip && \
 #    chmod +x /usr/local/bin/chromedriver
 
-RUN CHROMEDRIVER_VERSION=$(wget -qO- https://chromedriver.storage.googleapis.com/LATEST_RELEASE) && \
-    wget -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip && \
-    unzip /tmp/chromedriver.zip -d /usr/local/bin/ && \
-    rm /tmp/chromedriver.zip && \
-    chmod +x /usr/local/bin/chromedriver
+#RUN CHROMEDRIVER_VERSION=$(wget -qO- https://chromedriver.storage.googleapis.com/LATEST_RELEASE) && \
+#    wget -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip && \
+#    unzip /tmp/chromedriver.zip -d /usr/local/bin/ && \
+#    rm /tmp/chromedriver.zip && \
+#    chmod +x /usr/local/bin/chromedriver
 
-#RUN cp /usr/bin/chromedriver /usr/local/bin/
+RUN cp /usr/bin/chromedriver /usr/local/bin/
 
 ENTRYPOINT ["java", "-jar", "/app/live-feed-batch.jar", "--spring.profiles.active=${active_profile}"]
